--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "private": true,
   "dependencies": {
     "@nx/next": "17.1.3",
+    "axios": "^1.0.0",
+    "express": "^4.18.1",
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -15,13 +17,17 @@
     "@nx/cypress": "17.1.3",
     "@nx/eslint": "17.1.3",
     "@nx/eslint-plugin": "17.1.3",
+    "@nx/express": "^17.1.3",
     "@nx/jest": "17.1.3",
     "@nx/js": "17.1.3",
+    "@nx/node": "17.1.3",
     "@nx/react": "17.1.3",
+    "@nx/webpack": "17.1.3",
     "@nx/workspace": "17.1.3",
     "@swc-node/register": "~1.6.7",
     "@swc/core": "~1.3.85",
     "@testing-library/react": "14.0.0",
+    "@types/express": "4.17.13",
     "@types/jest": "^29.4.0",
     "@types/node": "18.14.2",
     "@types/react": "18.2.33",
@@ -40,6 +46,7 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
+    "jest-environment-node": "^29.4.1",
     "nx": "17.1.3",
     "prettier": "^2.6.2",
     "sass": "1.62.1",
