--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "dependencies": {
     "@nx/next": "17.1.3",
+    "@swc/helpers": "~0.5.2",
     "axios": "^1.0.0",
     "express": "^4.18.1",
     "next": "13.4.1",
@@ -25,6 +26,7 @@
     "@nx/webpack": "17.1.3",
     "@nx/workspace": "17.1.3",
     "@swc-node/register": "~1.6.7",
+    "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.85",
     "@testing-library/react": "14.0.0",
     "@types/express": "4.17.13",
