--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.19",
+    "@mui/material": "^5.14.20",
     "@nx/next": "17.1.3",
     "@swc/helpers": "~0.5.2",
     "axios": "^1.0.0",
