--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@swc/helpers": "~0.5.2",
     "axios": "^1.0.0",
     "express": "^4.18.1",
+    "mysql": "^2.18.1",
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tslib": "^2.3.0"
+    "reflect-metadata": "^0.1.13",
+    "tslib": "^2.3.0",
+    "typeorm": "^0.3.17"
   },
   "devDependencies": {
     "@nx/cypress": "17.1.3",
@@ -35,7 +38,7 @@
     "@testing-library/react": "14.0.0",
     "@types/express": "4.17.13",
     "@types/jest": "^29.4.0",
-    "@types/node": "18.14.2",
+    "@types/node": "^18.14.2",
     "@types/react": "18.2.33",
     "@types/react-dom": "18.2.14",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
@@ -57,7 +60,7 @@
     "prettier": "^2.6.2",
     "sass": "1.62.1",
     "ts-jest": "^29.1.0",
-    "ts-node": "10.9.1",
+    "ts-node": "^10.9.1",
     "typescript": "~5.2.2"
   }
 }
