--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "@mui/material": "^5.14.20",
     "@nx/next": "17.1.3",
     "@swc/helpers": "~0.5.2",
+    "@tanstack/react-query": "^5.13.4",
+    "@tanstack/react-query-devtools": "^5.13.5",
     "axios": "^1.0.0",
     "express": "^4.18.1",
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.49.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
