--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@tanstack/react-query-devtools": "^5.13.5",
     "axios": "^1.0.0",
     "express": "^4.18.1",
+    "json": "^11.0.0",
+    "json-server": "^0.17.4",
     "mysql": "^2.18.1",
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.49.0",
     "reflect-metadata": "^0.1.13",
+    "server": "^1.0.38",
     "tslib": "^2.3.0",
     "typeorm": "^0.3.17"
   },
