--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@tanstack/react-query": "^5.13.4",
     "@tanstack/react-query-devtools": "^5.13.5",
     "axios": "^1.0.0",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "json": "^11.0.0",
     "json-server": "^0.17.4",
+    "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "next": "13.4.1",
     "react": "18.2.0",
