--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.49.0",
+    "react-virtualized": "^9.22.5",
     "reflect-metadata": "^0.1.13",
     "server": "^1.0.38",
     "tslib": "^2.3.0",
