--- a/apps/goals-on-track-backend/src/config-pm2.json
+++ b/apps/goals-on-track-backend/src/config-pm2.json
@@ -7,7 +7,8 @@
             "instances": "max",
             "autorestart": true,
             "exec_mode": "cluster",
-            "log_date_format" : "YYYY-MM-DD HH:mm"
+            "log_date_format" : "YYYY-MM-DD HH:mm",
+            "node_args":"-r dotenv/config"
         }
     ]
 }
