--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.0.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.1",
     "json": "^11.0.0",
     "json-server": "^0.17.4",
