feat: backend: added pagin sort search for getuser api

--- a/.env.local
+++ b/.env.local
@@ -2,6 +2,6 @@ JWT_SECRET_KEY=sdfghjkla@$%&
 DB_PORT=5432
 PORT=3333
 HOST='localhost'
-USERNAME='postgres'
+USER='postgres'
 PASSWORD='password'
 DATABASE='got'
